--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,3 +1,35 @@
-<div class="container">
-  <h1>Under construction.</h1>
+<ul class="side-nav" id="mobile-menu">
+  <li><a href="#">Portfolio</a></li>
+  <li><a href="#">About us</a></li>
+  <li><a href="#">Contact</a></li>
+</ul>
+
+<div id="index-banner" class="parallax-container">
+  <div class="navbar-fixed">
+    <nav id='navigation'>
+      <div class="nav-wrapper container">
+        <a href="#" class="brand-logo light">fullstck</a>
+        <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+
+  <div class="section no-pad-bot no-pad-top">
+    <div class="container">
+      <h1 class="header center light">cheesy mc fancy quote ipsum</h1>
+    </div>
+  </div>
+  <div class="parallax">
+    <img src="http://i.imgur.com/teDYYVW.gif" alt="background">
+  </div>
+</div>
+
+<div class="navbar" id='navsep'>
+  <nav class="red lighten-1">
+  </nav>
 </div>
