--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,35 +1,79 @@
+<%# mobile navigation menu %>
 <ul class="side-nav" id="mobile-menu">
-  <li><a href="#">Portfolio</a></li>
   <li><a href="#">About us</a></li>
+  <li><a href="#">Portfolio</a></li>
   <li><a href="#">Contact</a></li>
 </ul>
 
+<%# navigation on top of page, follows you down %>
 <div id="index-banner" class="parallax-container">
   <div class="navbar-fixed">
     <nav id='navigation'>
       <div class="nav-wrapper container">
-        <a href="#" class="brand-logo light">fullstck</a>
+        <a href="#" class="brand-logo light">
+          <img src="http://i.imgur.com/Ti9xFFN.png" alt="logo">
+          fullstck
+        </a>
         <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">Portfolio</a></li>
           <li><a href="#">About us</a></li>
+          <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
     </nav>
   </div>
 
+  <%# text in middle of jumbotron %>
   <div class="section no-pad-bot no-pad-top">
     <div class="container">
       <h1 class="header center light">cheesy mc fancy quote ipsum</h1>
     </div>
   </div>
+
+  <%# parallax image %>
   <div class="parallax">
-    <img src="http://i.imgur.com/teDYYVW.gif" alt="background">
+    <img src="http://i.imgur.com/teDYYVW.gif" alt="backgcircle">
   </div>
 </div>
 
+<%# "separator" that later becomes part of the navigation %>
 <div class="navbar" id='navsep'>
   <nav class="red lighten-1">
   </nav>
+</div>
+
+<div class="container">
+  <div class="section center" id="aboutus">
+    <div class="row">
+      <div class="col s12">
+        <h2 class='light'>About us</h2>
+        <p class="flow-text sixty-percent-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+      <div class="col s12 m4">
+        <img src="http://placehold.it/150x150/EF5350" alt="" class='circle'>
+        <h4>Lorem</h4>
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+      <div class="col s12 m4">
+        <img src="http://placehold.it/150x150/EF5350" alt="" class='circle'>
+        <h4>Lorem</h4>
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+      <div class="col s12 m4">
+        <img src="http://placehold.it/150x150/EF5350" alt="" class='circle'>
+        <h4>Lorem</h4>
+        <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
