--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -8,7 +8,7 @@
 <%# navigation on top of page, follows you down %>
 <div id="index-banner" class="parallax-container">
   <div class="navbar-fixed">
-    <nav id='navigation'>
+    <nav id='navigation' class='trans-nav'>
       <div class="nav-wrapper container">
         <a href="#" class="brand-logo light">
           <img src="http://i.imgur.com/Ti9xFFN.png" alt="logo">
