fix some small bugs with smooth scrolling

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,6 +1,6 @@
 <%# mobile navigation menu %>
 <ul class="side-nav" id="mobile-menu">
-  <li><a href="#">About us</a></li>
+  <li><a href="#aboutus">About us</a></li>
   <li><a href="#">Portfolio</a></li>
   <li><a href="#">Contact</a></li>
 </ul>
@@ -10,13 +10,13 @@
   <div class="navbar-fixed">
     <nav id='navigation' class='trans-nav'>
       <div class="nav-wrapper container">
-        <a href="#" class="brand-logo light">
-          <img src="http://i.imgur.com/Ti9xFFN.png" alt="logo">
+        <a href="#index-banner" class="brand-logo light">
+          <img src="http://i.imgur.com/gmlDsU0.png" alt="logo">
           fullstck
         </a>
-        <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+        <a data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li><a href="#">About us</a></li>
+          <li><a href="#aboutus">About us</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -27,13 +27,13 @@
   <%# text in middle of jumbotron %>
   <div class="section no-pad-bot no-pad-top">
     <div class="container">
-      <h1 class="header center light">cheesy mc fancy quote ipsum</h1>
+      <h1 class="header center light">bacon sandwich fiesta</h1>
     </div>
   </div>
 
   <%# parallax image %>
   <div class="parallax">
-    <img src="http://i.imgur.com/teDYYVW.gif" alt="backgcircle">
+    <img src="http://i.imgur.com/3iVps92.gif" alt="backgcircle">
   </div>
 </div>
 
