no light main text in jumbotron

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -27,7 +27,7 @@
   <%# text in middle of jumbotron %>
   <div class="section no-pad-bot no-pad-top">
     <div class="container">
-      <h1 class="header center light">bacon sandwich fiesta</h1>
+      <h1 class="header center">bacon sandwich fiesta</h1>
     </div>
   </div>
 
