change background image

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -33,7 +33,7 @@
 
   <%# parallax image %>
   <div class="parallax">
-    <img src="http://i.imgur.com/3iVps92.gif" alt="backgcircle">
+    <img src="http://i.imgur.com/ggUDihR.gif" alt="background; peaceful savannah-esque landscape">
   </div>
 </div>
 
