--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -1,3 +1,6 @@
+// mixins and variables
+$hill-orange-dark: #E46049;
+
 body, html {
   height: 100%;
 }
@@ -53,7 +56,7 @@ footer.page-footer {
 }
 
 .vis-nav {
-  background-color: #EF5350;
+  background-color: $hill-orange-dark;
   box-shadow: 0 2px 5px 0 #00000029, 0 2px 10px 0 #0000001f;
 }
 
@@ -71,4 +74,15 @@ footer.page-footer {
   .sixty-percent-text {
     width: initial;
   }
+}
+
+.separator-nav {
+  background-color: $hill-orange-dark;
+}
+
+.half-parallax {
+  // need these stupid overrides because it won't override by default #css
+  height: 190px;
+  min-height: 190px;
+  max-height: 190px;
 }
