--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -39,7 +39,7 @@
 
 <%# "separator" that later becomes part of the navigation %>
 <div class="navbar" id='navsep'>
-  <nav class="red lighten-1">
+  <nav class="separator-nav">
   </nav>
 </div>
 
@@ -54,25 +54,89 @@
         </p>
       </div>
       <div class="col s12 m4">
-        <img src="http://placehold.it/150x150/EF5350" alt="" class='circle'>
+        <img src="https://placekitten.com/g/150/150" alt="" class='responsive-img circle'>
         <h4>Lorem</h4>
         <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
       </div>
       <div class="col s12 m4">
-        <img src="http://placehold.it/150x150/EF5350" alt="" class='circle'>
+        <img src="https://placekitten.com/g/150/150" alt="" class='responsive-img circle'>
         <h4>Lorem</h4>
         <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
       </div>
       <div class="col s12 m4">
-        <img src="http://placehold.it/150x150/EF5350" alt="" class='circle'>
+        <img src="https://placekitten.com/g/150/150" alt="" class='responsive-img circle'>
         <h4>Lorem</h4>
         <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<%# image to create some space for the next section %>
+<div class="parallax-container half-parallax white-text ">
+  <%# parallax image %>
+  <div class="parallax">
+    <img src="https://placekitten.com/g/1280/720" alt="">
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="section">
+    <div class="row">
+      <div class="col s12">
+        <h2 class='light center'>Portfolio</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m6 l4">
+        <div class="card medium">
+          <div class="card-image">
+            <img class="responsive-img" src="https://placekitten.com/400/200">
+          </div>
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">
+              Beef project
+            </span>
+            <p><a href="#">more details</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l4">
+        <div class="card medium">
+          <div class="card-image">
+            <img class="responsive-img" src="https://placekitten.com/401/202">
+          </div>
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">
+              Bacon project
+            </span>
+            <p><a href="#">more details</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m6 l4">
+        <div class="card medium">
+          <div class="card-image">
+            <img class="responsive-img" src="https://placekitten.com/402/204">
+          </div>
+          <div class="card-content">
+            <span class="card-title grey-text text-darken-4">
+              Egg project
+            </span>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor
+            </p>
+            <p><a href="#">more details</a></p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
