--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -11,7 +11,7 @@
     <nav id='navigation' class='trans-nav'>
       <div class="nav-wrapper container">
         <a href="#index-banner" class="brand-logo light">
-          <img src="http://i.imgur.com/gmlDsU0.png" alt="logo">
+          <img src="https://i.imgur.com/EfzUZJe.png" alt="logo">
           fullstck
         </a>
         <a data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -33,7 +33,7 @@
 
   <%# parallax image %>
   <div class="parallax">
-    <img src="http://i.imgur.com/ggUDihR.gif" alt="background; peaceful savannah-esque landscape">
+    <img src="https://i.imgur.com/ggUDihR.gif" alt="background; peaceful savannah-esque landscape">
   </div>
 </div>
 
@@ -88,55 +88,29 @@
 
 
 <div class="container">
-  <div class="section">
+  <div class="section portfolio-top">
     <div class="row">
       <div class="col s12">
         <h2 class='light center'>Portfolio</h2>
       </div>
     </div>
-    <div class="row">
-      <div class="col s12 m6 l4">
-        <div class="card medium">
-          <div class="card-image">
-            <img class="responsive-img" src="https://placekitten.com/400/200">
-          </div>
-          <div class="card-content">
-            <span class="card-title grey-text text-darken-4">
-              Beef project
-            </span>
-            <p><a href="#">more details</a></p>
-          </div>
-        </div>
+    <div class="carousel carousel-slider center">
+      <div class="carousel-fixed-item center">
+        <a class="btn waves-effect white grey-text darken-text-2" href="#">
+          See more
+        </a>
       </div>
-      <div class="col s12 m6 l4">
-        <div class="card medium">
-          <div class="card-image">
-            <img class="responsive-img" src="https://placekitten.com/401/202">
-          </div>
-          <div class="card-content">
-            <span class="card-title grey-text text-darken-4">
-              Bacon project
-            </span>
-            <p><a href="#">more details</a></p>
-          </div>
-        </div>
+      <div class="carousel-item" href="#one!">
+        <img src="https://placekitten.com/g/1280/720" alt="">
       </div>
-      <div class="col s12 m6 l4">
-        <div class="card medium">
-          <div class="card-image">
-            <img class="responsive-img" src="https://placekitten.com/402/204">
-          </div>
-          <div class="card-content">
-            <span class="card-title grey-text text-darken-4">
-              Egg project
-            </span>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor
-            </p>
-            <p><a href="#">more details</a></p>
-          </div>
-        </div>
+      <div class="carousel-item" href="#one!">
+        <img src="https://placekitten.com/g/1280/720" alt="">
+      </div>
+      <div class="carousel-item" href="#one!">
+        <img src="https://placekitten.com/g/1280/720" alt="">
+      </div>
+      <div class="carousel-item" href="#one!">
+        <img src="https://placekitten.com/g/1280/720" alt="">
       </div>
     </div>
   </div>
