--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -88,7 +88,7 @@
 
 
 <div class="container">
-  <div class="section portfolio-top">
+  <div class="section">
     <div class="row">
       <div class="col s12">
         <h2 class='light center'>Portfolio</h2>
