--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -93,25 +93,62 @@
       <div class="col s12">
         <h2 class='light center'>Portfolio</h2>
       </div>
+      <div class="carousel carousel-slider center">
+        <div class="carousel-fixed-item center">
+          <a class="btn waves-effect white grey-text darken-text-2" href="#">
+            See more
+          </a>
+        </div>
+        <div class="carousel-item" href="#one!">
+          <img src="https://placekitten.com/g/1280/720" alt="">
+        </div>
+        <div class="carousel-item" href="#one!">
+          <img src="https://placekitten.com/g/1280/720" alt="">
+        </div>
+        <div class="carousel-item" href="#one!">
+          <img src="https://placekitten.com/g/1280/720" alt="">
+        </div>
+        <div class="carousel-item" href="#one!">
+          <img src="https://placekitten.com/g/1280/720" alt="">
+        </div>
+      </div>
     </div>
-    <div class="carousel carousel-slider center">
-      <div class="carousel-fixed-item center">
-        <a class="btn waves-effect white grey-text darken-text-2" href="#">
-          See more
-        </a>
-      </div>
-      <div class="carousel-item" href="#one!">
-        <img src="https://placekitten.com/g/1280/720" alt="">
-      </div>
-      <div class="carousel-item" href="#one!">
-        <img src="https://placekitten.com/g/1280/720" alt="">
-      </div>
-      <div class="carousel-item" href="#one!">
-        <img src="https://placekitten.com/g/1280/720" alt="">
-      </div>
-      <div class="carousel-item" href="#one!">
-        <img src="https://placekitten.com/g/1280/720" alt="">
-      </div>
+  </div>
+</div>
+
+<%# image to create some space for the next section %>
+<div class="parallax-container half-parallax white-text ">
+  <%# parallax image %>
+  <div class="parallax">
+    <img src="https://placekitten.com/g/1280/720" alt="">
+  </div>
+</div>
+
+<div class="container">
+  <div class="section">
+    <div class="row">
+      <h2 class="light center">Contact</h2>
+      <form class="col s12">
+        <div class="row">
+          <div class="input-field col s12">
+            <input id="email" type="email" class="validate">
+            <label for="email">Email</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="input-field col s12">
+            <textarea id="message" class="materialize-textarea"></textarea>
+            <label for="message">Message</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12">
+            <button class="btn btn-large waves-effect waves-light" type="submit" name="action">Submit
+              <i class="material-icons right">send</i>
+            </button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
