--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -11,7 +11,7 @@
     <nav id='navigation' class='trans-nav'>
       <div class="nav-wrapper container">
         <a href="#index-banner" class="brand-logo light">
-          <img src="https://i.imgur.com/EfzUZJe.png" alt="logo">
+          <img src="https://i.imgur.com/k63S2AT.png" alt="logo">
           fullstck
         </a>
         <a data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -152,3 +152,26 @@
     </div>
   </div>
 </div>
+
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Word from the creators</h5>
+        <p class="grey-text text-lighten-4">Consectetur temporibus cupiditate repellendus dicta itaque? Maxime porro fugit libero sunt nisi fugit. Atque excepturi explicabo incidunt explicabo veniam vitae.</p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Links</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="https://github.com/fullstck">GitHub</a></li>
+          <li><a class="grey-text text-lighten-3" href="https://github.com/fullstck/homepage">Source</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+      &copy; 2016 Fredrik August Madsen-Malmo &amp; Aksel Andersen Syverud
+    </div>
+  </div>
+</footer>
