--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,8 +1,8 @@
 <%# mobile navigation menu %>
 <ul class="side-nav" id="mobile-menu">
   <li><a href="#aboutus">About us</a></li>
-  <li><a href="#">Portfolio</a></li>
-  <li><a href="#">Contact</a></li>
+  <li><a href="#portfolio">Portfolio</a></li>
+  <li><a href="#contact">Contact</a></li>
 </ul>
 
 <%# navigation on top of page, follows you down %>
@@ -17,8 +17,8 @@
         <a data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#aboutus">About us</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -78,54 +78,39 @@
   </div>
 </div>
 
-<%# image to create some space for the next section %>
-<div class="parallax-container half-parallax white-text ">
-  <%# parallax image %>
-  <div class="parallax">
-    <img src="https://placekitten.com/g/1280/720" alt="">
-  </div>
-</div>
-
-
-<div class="container">
-  <div class="section">
-    <div class="row">
-      <div class="col s12">
-        <h2 class='light center'>Portfolio</h2>
+<div class="section" id='portfolio'>
+  <div class="row">
+    <div class="carousel carousel-slider center">
+      <div class="carousel-fixed-item center">
+        <div class="row">
+          <div class="col s2 offset-s5">
+            <div class="card-panel">
+              <h3 class='light white-text'>Portfolio</h3>
+            </div>
+          </div>
+        </div>
+        <a class="btn waves-effect white grey-text darken-text-2" href="#">
+          See more
+        </a>
       </div>
-      <div class="carousel carousel-slider center">
-        <div class="carousel-fixed-item center">
-          <a class="btn waves-effect white grey-text darken-text-2" href="#">
-            See more
-          </a>
-        </div>
-        <div class="carousel-item" href="#one!">
-          <img src="https://placekitten.com/g/1280/720" alt="">
-        </div>
-        <div class="carousel-item" href="#one!">
-          <img src="https://placekitten.com/g/1280/720" alt="">
-        </div>
-        <div class="carousel-item" href="#one!">
-          <img src="https://placekitten.com/g/1280/720" alt="">
-        </div>
-        <div class="carousel-item" href="#one!">
-          <img src="https://placekitten.com/g/1280/720" alt="">
-        </div>
+      <div class="carousel-item" href="#one!">
+        <img src="https://placekitten.com/g/1280/720" alt="">
+      </div>
+      <div class="carousel-item" href="#one!">
+        <img src="https://placekitten.com/g/1280/720" alt="">
+      </div>
+      <div class="carousel-item" href="#one!">
+        <img src="https://placekitten.com/g/1280/720" alt="">
+      </div>
+      <div class="carousel-item" href="#one!">
+        <img src="https://placekitten.com/g/1280/720" alt="">
       </div>
     </div>
   </div>
 </div>
 
-<%# image to create some space for the next section %>
-<div class="parallax-container half-parallax white-text ">
-  <%# parallax image %>
-  <div class="parallax">
-    <img src="https://placekitten.com/g/1280/720" alt="">
-  </div>
-</div>
-
 <div class="container">
-  <div class="section">
+  <div class="section" id="contact">
     <div class="row">
       <h2 class="light center">Contact</h2>
       <form class="col s12">
@@ -158,7 +143,9 @@
     <div class="row">
       <div class="col l6 s12">
         <h5 class="white-text">Word from the creators</h5>
-        <p class="grey-text text-lighten-4">Consectetur temporibus cupiditate repellendus dicta itaque? Maxime porro fugit libero sunt nisi fugit. Atque excepturi explicabo incidunt explicabo veniam vitae.</p>
+        <p class="grey-text text-lighten-4">
+        Consectetur temporibus cupiditate repellendus dicta itaque? Maxime porro fugit libero sunt nisi fugit. Atque excepturi explicabo incidunt explicabo veniam vitae.
+        </p>
       </div>
       <div class="col l4 offset-l2 s12">
         <h5 class="white-text">Links</h5>
