fix footer and weird bug :smirk:

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -78,10 +78,10 @@
   </div>
 </div>
 
-<div class="section" id='portfolio'>
+<div class="section">
   <div class="row">
-    <div class="carousel carousel-slider center">
-      <div class="carousel-fixed-item center">
+    <div class="carousel carousel-slider center" id='portfolio'>
+      <div class="carousel-fixed-item center hide-on-med-and-down">
         <div class="row">
           <div class="col s2 offset-s5">
             <div class="card-panel">
@@ -94,7 +94,7 @@
         </a>
       </div>
       <div class="carousel-item" href="#one!">
-        <img src="https://placekitten.com/g/1280/720" alt="">
+        <img src="https://i.imgur.com/2S4ydCE.jpg" alt="">
       </div>
       <div class="carousel-item" href="#one!">
         <img src="https://placekitten.com/g/1280/720" alt="">
@@ -113,7 +113,7 @@
   <div class="section" id="contact">
     <div class="row">
       <h2 class="light center">Contact</h2>
-      <form class="col s12">
+      <form class="col s12" action="" method="">
         <div class="row">
           <div class="input-field col s12">
             <input id="email" type="email" class="validate">
