--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -33,7 +33,13 @@ p {
 }
 
 footer.page-footer {
-  margin: 0;
+  margin-top: 40px;
+
+  background-color: #4F1D42;
+
+  .footer-copyright {
+    background-color: #38142E;
+  }
 }
 
 @media (min-width: 660px) {
