kb-control car, toast on scroll to car and some un-cluttering

--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -96,6 +96,10 @@ footer.page-footer {
   background-color: $hill-orange-dark;
 }
 
+.orange-bg {
+  background-color: $hill-orange-dark;
+}
+
 // media queries
 @media (max-width: 600px) {
   .sixty-percent-text {
