--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -82,15 +82,8 @@
   <div class="row">
     <div class="carousel carousel-slider center" id='portfolio'>
       <div class="carousel-fixed-item center hide-on-med-and-down">
-        <div class="row">
-          <div class="col s2 offset-s5">
-            <div class="card-panel">
-              <h3 class='light white-text'>Portfolio</h3>
-            </div>
-          </div>
-        </div>
         <a class="btn waves-effect white grey-text darken-text-2" href="#">
-          See more
+          Portfolio
         </a>
       </div>
       <div class="carousel-item" href="#one!">
