new img and fixed port button on tab-

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -11,7 +11,7 @@
     <nav id='navigation' class='trans-nav'>
       <div class="nav-wrapper container">
         <a href="#index-banner" class="brand-logo light">
-          <img src="https://i.imgur.com/k63S2AT.png" alt="logo">
+          <img src="https://i.imgur.com/ySdx7qD.png" alt="logo">
           fullstck
         </a>
         <a data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -81,7 +81,7 @@
 <div class="section">
   <div class="row">
     <div class="carousel carousel-slider center" id='portfolio'>
-      <div class="carousel-fixed-item center hide-on-med-and-down">
+      <div class="carousel-fixed-item center">
         <a class="btn waves-effect white grey-text darken-text-2" href="#">
           Portfolio
         </a>
