--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -86,16 +86,16 @@
           Portfolio
         </a>
       </div>
-      <div class="carousel-item" href="#one!">
+      <div class="carousel-item">
         <img src="https://i.imgur.com/2S4ydCE.jpg" alt="">
       </div>
-      <div class="carousel-item" href="#one!">
+      <div class="carousel-item">
         <img src="https://placekitten.com/g/1280/720" alt="">
       </div>
-      <div class="carousel-item" href="#one!">
+      <div class="carousel-item">
         <img src="https://placekitten.com/g/1280/720" alt="">
       </div>
-      <div class="carousel-item" href="#one!">
+      <div class="carousel-item">
         <img src="https://placekitten.com/g/1280/720" alt="">
       </div>
     </div>
