--- a/app/views/contact_mailer/contact.html.erb
+++ b/app/views/contact_mailer/contact.html.erb
@@ -5,8 +5,6 @@
   </head>
   <body>
     <h1>New message from <%= @email %>:</h1>
-    <p>
-      <%= @message %>
-    </p>
+    <p><%= @message %></p>
   </body>
 </html>
