--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -121,7 +121,7 @@
         </div>
         <div class="row">
           <div class="col s12">
-            <button class="btn btn-large waves-effect waves-light" type="submit" name="action">Submit
+            <button id='submit' class="btn btn-large waves-effect waves-light" type="submit" name="action">Submit
               <i class="material-icons right">send</i>
             </button>
           </div>
