--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -5,10 +5,12 @@
 </script>
 
 <%# mobile navigation menu %>
-<ul class="side-nav" id="mobile-menu">
+<ul class="side-nav orange-bg" id="mobile-menu">
   <li><a href="#aboutus">About us</a></li>
   <li><a href="#portfolio">Portfolio</a></li>
   <li><a href="#contact">Contact</a></li>
+  <li class="divider"></li>
+  <li><a href="https://github.com/fullstck/homepage">Source</a></li>
 </ul>
 
 <%# navigation on top of page, follows you down %>
@@ -88,8 +90,8 @@
   <div class="row">
     <div class="carousel carousel-slider center" id='portfolio'>
       <div class="carousel-fixed-item center">
-        <a class="btn waves-effect white grey-text darken-text-2" href="#">
-          Portfolio
+        <a class="btn waves-effect white black-text" href="#">
+          More of our work
         </a>
       </div>
       <div class="carousel-item">
