--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -7,7 +7,7 @@
 </script>
 
 <%# mobile navigation menu %>
-<ul class="side-nav orange-bg" id="mobile-menu">
+<ul class="side-nav main-color" id="mobile-menu">
   <li><a href="#aboutus">About us</a></li>
   <li><a href="#portfolio">Portfolio</a></li>
   <li><a href="#contact">Contact</a></li>
@@ -43,7 +43,7 @@
 
   <%# parallax image %>
   <div class="parallax">
-    <img src="https://i.imgur.com/ggUDihR.gif" alt="background; peaceful savannah-esque landscape">
+    <%= image_tag 'background.jpg' %>
   </div>
 </div>
 
