--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -1,5 +1,5 @@
 // mixins and variables
-$hill-orange-dark: #E46049;
+$main-color: #38142E;
 
 body, html {
   height: 100%;
@@ -65,7 +65,7 @@ footer.page-footer {
 }
 
 .vis-nav {
-  background-color: $hill-orange-dark;
+  background-color: $main-color;
   box-shadow: 0 2px 5px 0 #00000029, 0 2px 10px 0 #0000001f;
 }
 
@@ -80,7 +80,7 @@ footer.page-footer {
 }
 
 .separator-nav {
-  background-color: $hill-orange-dark;
+  background-color: $main-color;
 }
 
 .half-parallax {
@@ -96,11 +96,11 @@ footer.page-footer {
 
 .carousel .card-panel {
   padding: 5px;
-  background-color: $hill-orange-dark;
+  background-color: $main-color;
 }
 
-.orange-bg {
-  background-color: $hill-orange-dark;
+.main-color {
+  background-color: $main-color;
 }
 
 .side-nav>li>a {
@@ -124,7 +124,7 @@ footer li * {
     display: none;
   }
   #index-banner {
-    background-image: url('https://i.imgur.com/ggUDihR.gif');
+    background-image: url('background.jpg');
     background-position: center center;
     background-attachment: fixed;
   }
