use asset_path in css and remove precompile from assets.rb

--- a/app/assets/stylesheets/static_page.scss.erb
+++ b/app/assets/stylesheets/static_page.scss.erb
@@ -124,7 +124,7 @@ footer li * {
     display: none;
   }
   #index-banner {
-    background-image: url('background.jpg');
+    background-image: url("<%= asset_path 'background.jpg' %>");
     background-position: center center;
     background-attachment: fixed;
   }
