use slick carousel as materalizecss' was bugged

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,4 @@
-@import "materialize";
-@import "static_page";
+@import 'materialize';
+@import 'slick';
+@import 'slick-theme';
+@import 'static_page';
