--- a/app/assets/stylesheets/static_page.scss.erb
+++ b/app/assets/stylesheets/static_page.scss.erb
@@ -13,8 +13,7 @@ p {
   line-height: 2rem;
 }
 
-.parallax-container {
-  line-height: 0;
+.parallax-container { line-height: 0;
   height: auto;
   display: flex;
 
@@ -109,6 +108,10 @@ color: white;
 
 footer li * {
   vertical-align:middle;
+}
+
+.slick div img {
+  width: 100%;
 }
 
 // media queries
