--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -98,25 +98,21 @@
   </div>
 </div>
 
-<div class="section">
-  <div class="row">
-    <div class="carousel carousel-slider center" id='portfolio'>
-      <div class="carousel-fixed-item center">
-        <a class="btn waves-effect white black-text" href="#">
-          More of our work
-        </a>
-      </div>
-      <div class="carousel-item">
-        <img src="https://i.imgur.com/2S4ydCE.jpg" alt="">
-      </div>
-      <div class="carousel-item">
-        <img src="https://placekitten.com/g/1280/720" alt="">
-      </div>
-      <div class="carousel-item">
-        <img src="https://placekitten.com/g/1280/720" alt="">
-      </div>
-      <div class="carousel-item">
-        <img src="https://placekitten.com/g/1280/720" alt="">
+<div id="portfolio">
+  <div class="slick">
+    <div><img class="responsive-img" src="https://unsplash.it/2000/600/?random=1" alt=""></div>
+    <div><img class="responsive-img" src="https://unsplash.it/2000/600/?random=2" alt=""></div>
+    <div><img class="responsive-img" src="https://unsplash.it/2000/600/?random=3" alt=""></div>
+    <div><img class="responsive-img" src="https://unsplash.it/2000/600/?random=4" alt=""></div>
+  </div>
+
+  <div class="container">
+    <div class="section">
+      <div class="slick-nav">
+        <div><img class="responsive-img" src="https://unsplash.it/2000/600/?random=1" alt=""></div>
+        <div><img class="responsive-img" src="https://unsplash.it/2000/600/?random=2" alt=""></div>
+        <div><img class="responsive-img" src="https://unsplash.it/2000/600/?random=3" alt=""></div>
+        <div><img class="responsive-img" src="https://unsplash.it/2000/600/?random=4" alt=""></div>
       </div>
     </div>
   </div>
