add read more link

--- a/app/assets/stylesheets/static_page.scss.erb
+++ b/app/assets/stylesheets/static_page.scss.erb
@@ -114,6 +114,10 @@ footer li * {
   width: 100%;
 }
 
+.material-icons {
+  vertical-align: middle;
+}
+
 // media queries
 @media (max-width: 600px) {
   .sixty-percent-text {
