--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -115,6 +115,12 @@
         <div><img class="responsive-img" src="https://unsplash.it/2000/600/?random=4" alt=""></div>
       </div>
     </div>
+    <div class="card-panel">
+      <p>
+        <i class='material-icons'>info_outline</i>
+        You can read about our previous creations in greater detail <a href="#" target="_blank">here</a>.
+      </p>
+    </div>
   </div>
 </div>
 
