:art: No more cats, replace with icons

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -65,7 +65,7 @@
         </p>
       </div>
       <div class="col s12 m4">
-        <img src="https://placekitten.com/g/150/150" alt="" class='responsive-img circle'>
+        <i class="material-icons large">settings</i>
         <h4>Development</h4>
         <p>
         Freedom is a great priority of ours, and to achieve that we use solely
@@ -75,17 +75,17 @@
         </p>
       </div>
       <div class="col s12 m4">
-        <img src="https://placekitten.com/g/150/150" alt="" class='responsive-img circle'>
+        <i class="material-icons large">forum</i>
         <h4>Collaboration</h4>
         <p>
         We aim to have complete transparency with our clients as we work
         with them. You will have full access to our work through sites like
-        <a href='https://github.com'>GitHub</a>, and if you are dissatisfied
+        <a href="https://github.com">GitHub</a>, and if you are dissatisfied
         with anything, we will alter our work to suit your demands.
         </p>
       </div>
       <div class="col s12 m4">
-        <img src="https://placekitten.com/g/150/150" alt="" class='responsive-img circle'>
+        <i class="material-icons large">mode_edit</i>
         <h4>Design</h4>
         <p>
         Our design also has a lot of focus on simplicity. By using flat/material
