add new images and fix database on laptop

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -100,11 +100,19 @@
 
 <div id="portfolio">
   <div class="slick">
+    <div>
+      <img class='responsive-img' src="<%= asset_path("forest.jpg") %>" alt="Material design forest">
+    </div>
+    <div>
+      <img class='responsive-img' src="<%= asset_path("opera.jpg") %>" alt="Material design opera">
+    </div>
   </div>
 
   <div class="container">
     <div class="section">
       <div class="slick-nav">
+        <img src="<%= asset_path("forest.jpg") %>" alt="Material design forest">
+        <img src="<%= asset_path("opera.jpg") %>" alt="Material design opera">
       </div>
     </div>
     <div class="card-panel">
