turns out firefox isn't too fond of detecting vertical changes, now register scroll on the body element, hide the overflow no-one knows where came from on IE/FF

--- a/app/assets/stylesheets/static_page.scss.erb
+++ b/app/assets/stylesheets/static_page.scss.erb
@@ -3,9 +3,6 @@ $main-color: #38142E;
 
 body, html {
   height: 100%;
-}
-
-body {
   overflow-x: hidden;
 }
 
@@ -130,6 +127,9 @@ footer li * {
     background-image: url("<%= asset_path 'background.jpg' %>");
     background-position: center center;
     background-attachment: fixed;
+  }
+  h1.header.center {
+    font-size: 2em;
   }
 }
 
