added favicon and new logo

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -21,7 +21,7 @@
     <nav id='navigation' class='trans-nav'>
       <div class="nav-wrapper container">
         <a href="#index-banner" class="brand-logo light">
-          <img src="https://i.imgur.com/ySdx7qD.png" alt="logo">
+          <img src="<%= asset_path 'logo.png' %>" alt="logo">
           fullstck
         </a>
         <a data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
