--- a/app/assets/stylesheets/static_page.scss.erb
+++ b/app/assets/stylesheets/static_page.scss.erb
@@ -10,17 +10,19 @@ p {
   line-height: 2rem;
 }
 
-.parallax-container { line-height: 0;
+.parallax-container {
+  line-height: 0;
   height: auto;
   display: flex;
+}
 
-  h1 {
-    margin: 1.68rem 0;
-  }
-  .section {
-    flex: auto;
-    align-self: center;
-  }
+h1 {
+  margin: 1.68rem 0;
+}
+
+.section {
+  flex: auto;
+  align-self: center;
 }
 
 .icon-block {
