fixed smooth-scrolling by adding inner body with overflow-x hidden

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
       ga('send', 'pageview');
     </script>
 
-    <%= yield %>
+    <div class="inner-body">
+      <%= yield %>
+    </div>
   </body>
 </html>
