remove parallax as it didn't work cause of previous overflow workaround

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -16,7 +16,7 @@
 </ul>
 
 <%# navigation on top of page, follows you down %>
-<div id="index-banner" class="parallax-container">
+<div id="index-banner">
   <div class="navbar-fixed">
     <nav id='navigation' class='trans-nav'>
       <div class="nav-wrapper container">
@@ -39,11 +39,6 @@
     <div class="container">
       <h1 class="header center">form & functionality</h1>
     </div>
-  </div>
-
-  <%# parallax image %>
-  <div class="parallax">
-    <%= image_tag 'background.jpg' %>
   </div>
 </div>
 
