--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -93,29 +93,13 @@
   </div>
 </div>
 
-<div id="portfolio">
-  <div class="slick">
-    <div>
-      <img class='responsive-img' src="<%= asset_path("forest.jpg") %>" alt="Material design forest">
-    </div>
-    <div>
-      <img class='responsive-img' src="<%= asset_path("opera.jpg") %>" alt="Material design opera">
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="section">
-      <div class="slick-nav">
-        <img src="<%= asset_path("forest.jpg") %>" alt="Material design forest">
-        <img src="<%= asset_path("opera.jpg") %>" alt="Material design opera">
-      </div>
-    </div>
-    <div class="card-panel">
-      <p>
-        <i class='material-icons'>info_outline</i>
-        You can read about our previous creations in greater detail <a href="#" target="_blank">here</a>.
-      </p>
-    </div>
+<div class='container' id="portfolio">
+  <div class="card-panel">
+    <p>
+    <i class='material-icons'>info_outline</i>
+    A more in-depth portfolio is under construction, where you will be able
+    to read about our previous work in greater detail.
+    </p>
   </div>
 </div>
 
