changed to show a card with one image for show-off, until we finish portfolio

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -93,13 +93,21 @@
   </div>
 </div>
 
-<div class='container' id="portfolio">
-  <div class="card-panel">
-    <p>
-    <i class='material-icons'>info_outline</i>
-    A more in-depth portfolio is under construction, where you will be able
-    to read about our previous work in greater detail.
-    </p>
+<div id="portfolio">
+  <div class="container">
+    <div class="card">
+      <div class="card-content">
+        <img class="responsive-img" src="<%= asset_path('opera.jpg') %>" alt="A material design approach to the norwegian opera">
+      </div>
+
+      <div class="card-action">
+      <p>
+      <i class='material-icons'>info_outline</i>
+      An in-depth portfolio is under construction, where you will be able
+      to read about our previous work in detail.
+      </p>
+      </div>
+    </div>
   </div>
 </div>
 
