change from copyright to say it's released under agpl-v3

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -157,7 +157,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-      &copy; 2016 Fredrik August Madsen-Malmo &amp; Aksel Andersen Syverud
+      Released under AGPL-v3 - Made by Fredrik August Madsen-Malmo &amp; Aksel Andersen Syverud
     </div>
   </div>
 </footer>
