--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -157,7 +157,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-      Released under AGPL-v3 - Made by Fredrik August Madsen-Malmo &amp; Aksel Andersen Syverud
+      Released under GNU AGPL-v3.0 - Made by Fredrik August Madsen-Malmo &amp; Aksel Andersen Syverud
     </div>
   </div>
 </footer>
