add source to footer

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -157,7 +157,8 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-      Released under GNU AGPL-v3.0 - Made by Fredrik August Madsen-Malmo &amp; Aksel Andersen Syverud
+      Released under GNU AGPL-v3.0
+      <a href='https://github.com/fullstck/homepage'><span class='right'>Source</span></a>
     </div>
   </div>
 </footer>
