Make link grey instead of blue

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -158,7 +158,7 @@
   <div class="footer-copyright">
     <div class="container">
       Released under GNU AGPL-v3.0
-      <a href='https://github.com/fullstck/homepage'><span class='right'>Source</span></a>
+      <a href='https://github.com/fullstck/homepage'><span class='right grey-text'>Source</span></a>
     </div>
   </div>
 </footer>
